A user asked about this, and it wasn't in the handbook. so add it.
Approved by:	gabor


git-svn-id: https://svn.freebsd.org/doc/head@39666 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/en_US.ISO8859-1/books/handbook/l10n/chapter.xml
+++ b/en_US.ISO8859-1/books/handbook/l10n/chapter.xml
@@ -155,6 +155,11 @@
 	</tgroup>
       </informaltable>
 
+      <para>A complete listing of available locales can be found by
+	typing:</para>
+
+      <screen>&prompt.user; <userinput>locale -a</userinput></screen>
+
     </sect2>
 
     <sect2>
