Modernize the installation portion of the flyer.
Approved by:	bcr


git-svn-id: https://svn.freebsd.org/doc/head@39704 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/en_US.ISO8859-1/flyer/flyer.tex
+++ b/en_US.ISO8859-1/flyer/flyer.tex
@@ -160,8 +160,8 @@ etc., without any noticeable speed degradation.
 
 \titledframe{FreeBSD is easy to install}{
 FreeBSD can be installed from a variety of media including CD-ROM,
-DVD-ROM, floppy disk, magnetic tape, an MS-DOS\reg
-partition, or if you have a network connection, you can install it
+DVD-ROM, USB stick,
+or even
 directly using anonymous FTP or NFS.
 }{17.3cm}
 
