--- a/en_US.ISO8859-1/flyer/flyer.tex
+++ b/en_US.ISO8859-1/flyer/flyer.tex
@@ -146,9 +146,10 @@ OpenOffice.org, KDE, GNOME, MPlayer, etc.
 \medskip
 
 FreeBSD provides the ports system which fetches sources
-from the Internet or from a CD-ROM and compiles binaries, including
+from the Internet and compiles binaries, including
 building and installing any dependencies.  All these operations are
-done in a transparent way for the user.
+done in a transparent way for the user.  Compiled binaries
+are also available.
 \medskip
 
 Most of GNU/Linux binaries run under FreeBSD, for example:
