pslatex is considered obsolete.
Approved by:	bcr


git-svn-id: https://svn.freebsd.org/doc/head@39706 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/en_US.ISO8859-1/flyer/flyer.tex
+++ b/en_US.ISO8859-1/flyer/flyer.tex
@@ -35,7 +35,7 @@
 \usepackage[latin1]{inputenc}
 % Use the right language
 \usepackage[english]{babel}
-\usepackage{pslatex}
+\usepackage{mathptmx}
 \usepackage{graphicx}
 \usepackage{fancybox}
 \usepackage{url}
