MFen the Dutch handbook: - Bump SRCID for sgml to xml rename - l10n 39544 -> 39666
git-svn-id: https://svn.freebsd.org/doc/head@39779 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/nl_NL.ISO8859-1/books/handbook/l10n/chapter.xml
+++ b/nl_NL.ISO8859-1/books/handbook/l10n/chapter.xml
@@ -5,7 +5,7 @@
       $FreeBSD$
 
       %SOURCE%	en_US.ISO8859-1/books/handbook/l10n/chapter.xml
-      %SRCID%	39544
+      %SRCID%	39666
 -->
 
 <chapter id="l10n">
@@ -195,6 +195,10 @@
 	</tgroup>
       </informaltable>
 
+      <para>Een complete lijst van beschikbare locales is beschikbaar
+	via:</para>
+
+      <screen>&prompt.user; <userinput>locale -a</userinput></screen>
     </sect2>
 
     <sect2>
