Replace 'cvs' by 'svn'
git-svn-id: https://svn.freebsd.org/doc/head@40178 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/share/pgpkeys/README
+++ b/share/pgpkeys/README
@@ -35,7 +35,7 @@ address.  For instance, in my case:
 |       &pgpkey.des;
 |     </sect2>
 | 
-| Don't forget to 'cvs add des.key' if this is a new entry,
+| Don't forget to 'svn add des.key' if this is a new entry,
 | and check your diffs before committing!
 
 If your login name is different from your freefall login name, specify
@@ -68,7 +68,7 @@ Beware that the keys are supposed to be ordered by surname; if you're
 unsure where to add your entry, use finger(1) to check the surnames of
 those around you.
 
-Once you've successfully run addkey.sh, 'cvs add' your key file, check
+Once you've successfully run addkey.sh, 'svn add' your key file, check
 the diffs, and commit.
 
 
