--- a/share/pgpkeys/README
+++ b/share/pgpkeys/README
@@ -26,9 +26,9 @@ address.  For instance, in my case:
 | Adding key to entity list...
 | 
 | Unless you are already listed there, you should now add the
-| following text to pgpkeys-developers.sgml (unless this is a role key
-| or you are a core member. In that case add to pgpkeys-officers.sgml
-| or pgpkeys-core.sgml). Remember to keep the list sorted by last name!
+| following text to pgpkeys-developers.xml (unless this is a role key
+| or you are a core member. In that case add to pgpkeys-officers.xml
+| or pgpkeys-core.xml). Remember to keep the list sorted by last name!
 | 
 |     <sect2 id="pgpkey-des">
 |       <title>&a.des;</title>
@@ -77,7 +77,7 @@ the diffs, and commit.
 
 There are two ways to update your key.  The first is to follow the
 above instructions as if you were adding your key for the first time -
-except that you don't need to edit chapter.sgml, because you're
+except that you don't need to edit chapter.xml, because you're
 already listed there.  The addkey.sh script will snarf the RCS Id from
 the old key file and generate a new one with whatever keys you
 specified.
