Incorporate "The Basics" into the Synopsis.
Sponsored by: iXsystems


git-svn-id: https://svn.freebsd.org/doc/head@43860 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/en_US.ISO8859-1/books/handbook/l10n/chapter.xml
+++ b/en_US.ISO8859-1/books/handbook/l10n/chapter.xml
@@ -23,11 +23,38 @@
     <title>Synopsis</title>
 
     <para>&os; is a distributed project with users and contributors
-      located all over the world.  This chapter discusses the
-      internationalization and localization features of &os; that
-      allow non-English speaking users to get real work done.  Since
+      located all over the world.  As such, &os; supports localization
+      into many languages.  This allows a user to view, input, or process data in non-English
+      languages.  Currently, one can choose from most of the
+	major languages, including but not limited to:  Chinese,
+	German, Japanese, Korean, French, Russian, and
+	Vietnamese.</para>
+
+      <indexterm>
+	<primary>internationalization</primary>
+	<see>localization</see>
+      </indexterm>
+      <indexterm><primary>localization</primary></indexterm>
+
+      <para>The term internationalization has been shortened to
+	<acronym>i18n</acronym>, which represents the number of
+	letters between the first and the last letters of
+	internationalization.  <acronym>L10n</acronym> uses the
+	same naming scheme, coming from <quote>localization</quote>.
+	Combined together,
+	<acronym>i18n</acronym>/<acronym>L10n</acronym> methods,
+	protocols, and applications allow users to use languages of
+	their choice.</para>
+
+      <para><acronym>i18n</acronym> applications are programmed using
+	<acronym>i18n</acronym> kits under libraries.  These allow
+	developers to write a simple file and translate displayed
+	menus and texts to each language.</para>
+
+      <para>This chapter discusses the
+      internationalization and localization features of &os;.  Since
       there are many aspects of the <acronym>i18n</acronym>
-      implementation in both the system and application levels, more
+      implementation at both the system and application levels, more
       specific sources of documentation are referred to, where
       applicable.</para>
 
@@ -66,55 +93,6 @@
 	  additional third-party
 	  applications</link>.</para></listitem>
     </itemizedlist>
-  </sect1>
-
-  <sect1 xml:id="l10n-basics">
-    <title>The Basics</title>
-
-    <sect2>
-      <title>What Is
-	<acronym>i18n</acronym>/<acronym>L10n</acronym>?</title>
-
-      <indexterm>
-	<primary>internationalization</primary>
-	<see>localization</see>
-      </indexterm>
-      <indexterm><primary>localization</primary></indexterm>
-
-      <para>The term internationalization has been shortened to
-	<acronym>i18n</acronym>, which represents the number of
-	letters between the first and the last letters of
-	internationalization.  <acronym>L10n</acronym> uses the
-	same naming scheme, coming from <quote>localization</quote>.
-	Combined together,
-	<acronym>i18n</acronym>/<acronym>L10n</acronym> methods,
-	protocols, and applications allow users to use languages of
-	their choice.</para>
-
-      <para><acronym>i18n</acronym> applications are programmed using
-	<acronym>i18n</acronym> kits under libraries.  These allow
-	developers to write a simple file and translate displayed
-	menus and texts to each language.</para>
-    </sect2>
-
-    <sect2>
-      <title>Why Use
-	<acronym>i18n</acronym>/<acronym>L10n</acronym>?</title>
-
-      <para>Using <acronym>i18n</acronym>/<acronym>L10n</acronym>
-	allows a user to view, input, or process data in non-English
-	languages.</para>
-    </sect2>
-
-    <sect2>
-      <title>Which Languages Are Supported?</title>
-
-      <para><acronym>i18n</acronym> and <acronym>L10n</acronym> are
-	not &os; specific.  Currently, one can choose from most of the
-	major languages, including but not limited to:  Chinese,
-	German, Japanese, Korean, French, Russian, and
-	Vietnamese.</para>
-    </sect2>
   </sect1>
 
   <sect1 xml:id="using-localization">
