White space fix only. Translators can ignore.
Sponsored by: iXsystems


git-svn-id: https://svn.freebsd.org/doc/head@43861 c2e8774f-c49f-e111-b436-862b2bbc8956

--- a/en_US.ISO8859-1/books/handbook/l10n/chapter.xml
+++ b/en_US.ISO8859-1/books/handbook/l10n/chapter.xml
@@ -5,58 +5,59 @@
      $FreeBSD$
 -->
 <chapter xmlns="http://docbook.org/ns/docbook" xmlns:xlink="http://www.w3.org/1999/xlink" version="5.0" xml:id="l10n">
-  <info><title>Localization -
-    <acronym>i18n</acronym>/<acronym>L10n</acronym> Usage and
-    Setup</title>
+  <info>
+    <title>Localization -
+      <acronym>i18n</acronym>/<acronym>L10n</acronym> Usage and
+      Setup</title>
+
     <authorgroup>
-      <author><personname><firstname>Andrey</firstname><surname>Chernov</surname></personname><contrib>Contributed by </contrib></author>
+      <author><personname><firstname>Andrey</firstname><surname>Chernov</surname></personname><contrib>Contributed
+	by </contrib></author>
     </authorgroup>
     <authorgroup>
-      <author><personname><firstname>Michael C.</firstname><surname>Wu</surname></personname><contrib>Rewritten by </contrib></author>
+      <author><personname><firstname>Michael
+	C.</firstname><surname>Wu</surname></personname><contrib>Rewritten
+	by </contrib></author>
       <!-- 30 Nv 2000 -->
     </authorgroup>
   </info>
-
-  
 
   <sect1 xml:id="l10n-synopsis">
     <title>Synopsis</title>
 
     <para>&os; is a distributed project with users and contributors
       located all over the world.  As such, &os; supports localization
-      into many languages.  This allows a user to view, input, or process data in non-English
-      languages.  Currently, one can choose from most of the
-	major languages, including but not limited to:  Chinese,
-	German, Japanese, Korean, French, Russian, and
-	Vietnamese.</para>
+      into many languages.  This allows a user to view, input, or
+      process data in non-English languages.  Currently, one can
+      choose from most of the major languages, including but not
+      limited to:  Chinese, German, Japanese, Korean, French, Russian,
+      and Vietnamese.</para>
 
-      <indexterm>
-	<primary>internationalization</primary>
+    <indexterm>
+      <primary>internationalization</primary>
 	<see>localization</see>
-      </indexterm>
-      <indexterm><primary>localization</primary></indexterm>
+    </indexterm>
+    <indexterm><primary>localization</primary></indexterm>
 
-      <para>The term internationalization has been shortened to
-	<acronym>i18n</acronym>, which represents the number of
-	letters between the first and the last letters of
-	internationalization.  <acronym>L10n</acronym> uses the
-	same naming scheme, coming from <quote>localization</quote>.
-	Combined together,
-	<acronym>i18n</acronym>/<acronym>L10n</acronym> methods,
-	protocols, and applications allow users to use languages of
-	their choice.</para>
+    <para>The term internationalization has been shortened to
+      <acronym>i18n</acronym>, which represents the number of letters
+      between the first and the last letters of internationalization.
+      <acronym>L10n</acronym> uses the same naming scheme, coming from
+      <quote>localization</quote>.  Combined together,
+      <acronym>i18n</acronym>/<acronym>L10n</acronym> methods,
+      protocols, and applications allow users to use languages of
+      their choice.</para>
 
-      <para><acronym>i18n</acronym> applications are programmed using
-	<acronym>i18n</acronym> kits under libraries.  These allow
-	developers to write a simple file and translate displayed
-	menus and texts to each language.</para>
+    <para><acronym>i18n</acronym> applications are programmed using
+      <acronym>i18n</acronym> kits under libraries.  These allow
+      developers to write a simple file and translate displayed menus
+      and texts to each language.</para>
 
-      <para>This chapter discusses the
-      internationalization and localization features of &os;.  Since
-      there are many aspects of the <acronym>i18n</acronym>
-      implementation at both the system and application levels, more
-      specific sources of documentation are referred to, where
-      applicable.</para>
+    <para>This chapter discusses the internationalization and
+      localization features of &os;.  Since there are many aspects of
+      the <acronym>i18n</acronym> implementation at both the system
+      and application levels, more specific sources of documentation
+      are referred to, where applicable.</para>
 
     <para>After reading this chapter, you will know:</para>
 
@@ -193,7 +194,8 @@
       </itemizedlist>
 
       <para>The active list of character sets can be found at the
-	<link xlink:href="http://www.iana.org/assignments/character-sets">IANA
+	<link
+	  xlink:href="http://www.iana.org/assignments/character-sets">IANA
 	  Registry</link>.</para>
 
       <note>
@@ -402,7 +404,8 @@ me:\
 
 	  <note>
 	    <para>This method is not recommended because it requires
-	      a different setup for each shell.  Use the <link linkend="login-class">Login Class Method</link>
+	      a different setup for each shell.  Use the <link
+		linkend="login-class">Login Class Method</link>
 	      instead.</para>
 	  </note>
 
@@ -496,10 +499,11 @@ keychange="<replaceable>fkey_number sequence</replaceable>"</programlisting>
       <programlisting>mousechar_start=3</programlisting>
 
       <para>The <replaceable>keymap_name</replaceable> in the above
-	example is taken from <filename>/usr/share/syscons/keymaps</filename>,
-	without the <filename>.kbd</filename> suffix.  When uncertain
-	as to which keymap to use, &man.kbdmap.1; can be used to test
-	keymaps without rebooting.</para>
+	example is taken from
+	<filename>/usr/share/syscons/keymaps</filename>, without the
+	<filename>.kbd</filename> suffix.  When uncertain as to which
+	keymap to use, &man.kbdmap.1; can be used to test keymaps
+	without rebooting.</para>
 
       <para>The <literal>keychange</literal> is usually needed to
 	program function keys to match the selected terminal type
@@ -695,12 +699,14 @@ keychange="<replaceable>fkey_number sequence</replaceable>"</programlisting>
     <title>Localizing &os; to Specific Languages</title>
 
     <sect2 xml:id="ru-localize">
-      <info><title>Russian Language (KOI8-R Encoding)</title>
+      <info>
+	<title>Russian Language (KOI8-R Encoding)</title>
+
 	<authorgroup>
-	  <author><personname><firstname>Andrey</firstname><surname>Chernov</surname></personname><contrib>Originally contributed by </contrib></author>
+	  <author><personname><firstname>Andrey</firstname><surname>Chernov</surname></personname><contrib>Originally
+	    contributed by </contrib></author>
 	</authorgroup>
       </info>
-      
 
       <indexterm>
 	<primary>localization</primary>
@@ -790,7 +796,8 @@ mousechar_start=3</programlisting>
 
 	  <listitem>
 	    <para>When using <application>&xorg;</application>,
-	      install the <package>x11-fonts/xorg-fonts-cyrillic</package>
+	      install the
+	      <package>x11-fonts/xorg-fonts-cyrillic</package>
 	      package.</para>
 
 	    <para>Check the <literal>"Files"</literal> section in
@@ -819,11 +826,13 @@ Option "XkbOptions"  "grp:toggle"</programlisting>
 
 	    <para>For <literal>grp:toggle</literal> use
 	      <keycap>Right Alt</keycap>, for
-	      <literal>grp:ctrl_shift_toggle</literal> use <keycombo action="simul"><keycap>Ctrl</keycap><keycap>Shift</keycap></keycombo>.
+	      <literal>grp:ctrl_shift_toggle</literal> use <keycombo
+		action="simul"><keycap>Ctrl</keycap><keycap>Shift</keycap></keycombo>.
 	      For <literal>grp:caps_toggle</literal> use
 	      <keycap>CapsLock</keycap>.  The old
 	      <keycap>CapsLock</keycap> function is still available
-	      in LAT mode only using <keycombo action="simul"><keycap>Shift</keycap><keycap>CapsLock</keycap></keycombo>.
+	      in LAT mode only using <keycombo
+		action="simul"><keycap>Shift</keycap><keycap>CapsLock</keycap></keycombo>.
 	      <literal>grp:caps_toggle</literal>
 	      does not work in <application>&xorg;</application> for
 	      some unknown reason.</para>
@@ -863,7 +872,8 @@ Option "XkbOptions"  "grp:toggle"</programlisting>
 	<secondary>Traditional Chinese</secondary>
       </indexterm>
       <para>The &os;-Taiwan Project has a Chinese HOWTO for
-	&os; at <uri xlink:href="http://netlab.cse.yzu.edu.tw/~statue/freebsd/zh-tut/">http://netlab.cse.yzu.edu.tw/~statue/freebsd/zh-tut/</uri>
+	&os; at <uri
+	  xlink:href="http://netlab.cse.yzu.edu.tw/~statue/freebsd/zh-tut/">http://netlab.cse.yzu.edu.tw/~statue/freebsd/zh-tut/</uri>
 	using many Chinese ports.  The current editor for the
 	<literal>&os; Chinese HOWTO</literal> is Shen Chuan-Hsing
 	<email>statue@freebsd.sinica.edu.tw</email>.</para>
@@ -880,7 +890,8 @@ Option "XkbOptions"  "grp:toggle"</programlisting>
 
       <para>Slaven Rezic <email>eserte@cs.tu-berlin.de</email> wrote a
 	tutorial on using umlauts on &os;.  The tutorial
-	is written in German and is available at <uri xlink:href="http://user.cs.tu-berlin.de/~eserte/FreeBSD/doc/umlaute/umlaute.html">http://user.cs.tu-berlin.de/~eserte/FreeBSD/doc/umlaute/umlaute.html</uri>.</para>
+	is written in German and is available at <uri
+	  xlink:href="http://user.cs.tu-berlin.de/~eserte/FreeBSD/doc/umlaute/umlaute.html">http://user.cs.tu-berlin.de/~eserte/FreeBSD/doc/umlaute/umlaute.html</uri>.</para>
     </sect2>
 
     <sect2>
@@ -892,7 +903,8 @@ Option "XkbOptions"  "grp:toggle"</programlisting>
       </indexterm>
       <para>Nikos Kokkalis <email>nickkokkalis@gmail.com</email> has
 	written a complete article on Greek support in &os;.  It is
-	available <link xlink:href="&url.doc.base;/el_GR.ISO8859-7/articles/greek-language-support/index.html">here</link>,
+	available <link
+	  xlink:href="&url.doc.base;/el_GR.ISO8859-7/articles/greek-language-support/index.html">here</link>,
 	in Greek only, as part of the official &os; Greek
 	documentation.</para>
     </sect2>
@@ -908,10 +920,10 @@ Option "XkbOptions"  "grp:toggle"</programlisting>
 	<primary>localization</primary>
 	<secondary>Korean</secondary>
       </indexterm>
-      <para>For Japanese, refer to
-	<uri xlink:href="http://www.jp.FreeBSD.org/">http://www.jp.FreeBSD.org/</uri>,
-	and for Korean, refer to
-	<uri xlink:href="http://www.kr.FreeBSD.org/">http://www.kr.FreeBSD.org/</uri>.</para>
+      <para>For Japanese, refer to <uri
+	  xlink:href="http://www.jp.FreeBSD.org/">http://www.jp.FreeBSD.org/</uri>,
+	and for Korean, refer to <uri
+	  xlink:href="http://www.kr.FreeBSD.org/">http://www.kr.FreeBSD.org/</uri>.</para>
     </sect2>
 
     <sect2>
@@ -919,8 +931,8 @@ Option "XkbOptions"  "grp:toggle"</programlisting>
 
       <para>Some &os; contributors have translated parts of the
 	&os; documentation to other languages.  They are available
-	through links on the
-	<link xlink:href="&url.base;/index.html">main site</link> or in
+	through links on the <link
+	  xlink:href="&url.base;/index.html">main site</link> or in
 	<filename>/usr/share/doc</filename>.</para>
     </sect2>
   </sect1>
